--- a/style.css
+++ b/style.css
@@ -74,4 +74,18 @@
   }
 }
 
+/*links & hover*/
+li a {
+  text-decoration: none;
+  color:#002e79;
+}
+li a:hover{
+  color: #4984e3;
+  font-weight:bold;
+}
 
+/*button & input*/
+
+input{
+  outline: none;
+}
